# voice-conversation-ai

./: .gitignore  README.md  compose.yml  pyproject.toml
go_mic_streamer/: .gitignore  go.mod  go.sum
go_mic_streamer/cmd/: main.go
go_mic_streamer/player/: voicevox_t2s.go
go_mic_streamer/recorder/: pcm.go  pcm_test.go  wav_encoder.go
voice_conversation_ai/: conversation_service.py  entrypoint.py  main.py  tmp.py  transcriber.py
voice_conversation_ai/llm/: llm_base.py  ollama_llm.py  openai_llm.py
